--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>panda_reach_test</name>
+  <name>panda_openai</name>
   <version>0.0.0</version>
-  <description>The panda_reach_test package</description>
+  <description>The panda_openai package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
